<resources>
    <string name="app_name">Расчет НДС</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-9077835132655402/9391221170</string>

    <string name="summ_net">Выделить НДС</string>
    <string name="summ_gross">Начислить НДС</string>

    <string name="tax_rate">Ставка налога</string>
    <string name="usual13">18%</string>
    <string name="nonresident30">10%</string>
    <string name="other_rate">Другая ставка</string>

    <string name="btn_calc">Рассчитать</string>
    <string name="res_sem_net">Сумма</string>
    <string name="res_sum_tax">Сумма налога</string>
    <string name="res_all">Общая сумма с налогом</string>
    <string name="zero">0.00</string>
</resources>
