<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="ru.binarysimple.nds.Main"
    android:focusable="false">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RadioGroup
                        android:id="@+id/rgBase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbSumNet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/summ_net" />

                        <RadioButton
                            android:id="@+id/rbsumGross"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/summ_gross" />

                        <EditText
                            android:id="@+id/etBase"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoText="false"
                            android:ems="10"
                            android:hint="@string/zero"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionDone"
                            android:singleLine="true" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/tax_rate"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <RadioGroup
                        android:id="@+id/rgTaxes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/rbUsual13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/usual13" />

                        <RadioButton
                            android:id="@+id/rbNonresident30"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nonresident30" />

                        <RadioButton
                            android:id="@+id/rbOther"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other_rate" />

                        <EditText
                            android:id="@+id/etTaxrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:enabled="false"
                            android:hint="0.00"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionDone"
                            android:singleLine="true" />
                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_calc" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/res_sem_net"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/tvNet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/res_sum_tax"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/tvTax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/res_all"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/tvGross"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"
                android:layout_gravity="bottom|center_horizontal">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
